@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-02T08:13:55Z",
+  "timestamp" : "2023-08-03T08:13:55Z",
   "count_outdated" : 153,
   "uniques_outdated" : 128,
-  "count" : 164,
-  "uniques" : 138,
+  "count" : 165,
+  "uniques" : 139,
   "clones" : [
     {
       "timestamp": "2023-07-21T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2023-08-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
