@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 4,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2023-08-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
